2001-12-14  Werner Koch  <wk@gnupg.org>

	* assuan-listen.c (assuan_close_input_fd): New.
	(assuan_close_output_fd): New.
	* assuan-handler.c (std_handler_reset): Always close them after a
	reset command.
	(std_handler_bye): Likewise.

2001-12-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-buffer.c (_assuan_read_line): New variable ATTICLEN, use
	it to save the length of the attic line.
	Rediddle the code a bit to make it more clear what happens.

2001-12-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (LINELENGTH): Define as ASSUAN_LINELENGTH.
	assuan.h: Define ASSUAN_LINELENGTH.

2001-12-13  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-buffer.c (assuan_read_line): Fix order of execution to
	get correct return values.

2001-12-13  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (assuan_get_active_fds): Fixed silly bug,
	pretty obvious that nobody ever tested this function.

2001-12-12  Werner Koch  <wk@gnupg.org>

	* assuan-connect.c (assuan_pipe_connect): Implemented the inital
	handshake.
	* assuan-client.c (read_from_server): Renamed to  
	(_assuan_read_from_server): this and made external.

	* assuan-listen.c (assuan_set_hello_line): New.
	(assuan_accept): Use a custom hello line is available.

	* assuan-buffer.c (assuan_read_line): New.
	(assuan_pending_line): New.
	(_assuan_write_line): Renamed to ..
	(assuan_write_line): this, made public and changed all callers.

2001-12-04  Werner Koch  <wk@gnupg.org>

	* assuan-connect.c (assuan_pipe_connect): Add more error reporting.
	* assuan-client.c: New.

	* assuan-inquire.c: New.
	* assuan-handler.c (process_request): Check for nested invocations.

2001-11-27  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (assuan_register_input_notify): New.
	(assuan_register_output_notify): New.

2001-11-26  Werner Koch  <wk@gnupg.org>

	* assuan.h: Added more status codes.

2001-11-25  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (assuan_register_bye_notify)
	(assuan_register_reset_notify)